// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/TextDismissableBar > should match snapshot 1`] = `
<div>
  <div
    class="announcement-bar announcement-bar-critical"
    css="[object Object]"
  >
    <div
      class="announcement-bar__text"
    >
      <span>
        <i
          class="icon icon-information-outline"
        />
        <p
          class="markdown__paragraph-inline"
        >
          sample text
        </p>
      </span>
    </div>
    <a
      class="announcement-bar__close"
      href="#"
    >
      ×
    </a>
  </div>
</div>
`;

exports[`components/TextDismissableBar > should match snapshot, with an internal and an external link 1`] = `
<div>
  <div
    class="announcement-bar announcement-bar-critical"
    css="[object Object]"
  >
    <div
      class="announcement-bar__text"
    >
      <span>
        <i
          class="icon icon-information-outline"
        />
        <p
          class="markdown__paragraph-inline"
        >
          A 
          <a
            class="theme markdown__link"
            href="http://testurl.com/admin_console/"
            rel="noreferrer"
            target="_blank"
          >
            link
          </a>
           with an internal url and a 
          <a
            class="theme markdown__link"
            href="http://other-url.com/admin_console/"
            rel="noreferrer"
            target="_blank"
          >
            link
          </a>
           with an external url
        </p>
      </span>
    </div>
    <a
      class="announcement-bar__close"
      href="#"
    >
      ×
    </a>
  </div>
</div>
`;

exports[`components/TextDismissableBar > should match snapshot, with an internal url 1`] = `
<div>
  <div
    class="announcement-bar announcement-bar-critical"
    css="[object Object]"
  >
    <div
      class="announcement-bar__text"
    >
      <span>
        <i
          class="icon icon-information-outline"
        />
        <p
          class="markdown__paragraph-inline"
        >
          A 
          <a
            class="theme markdown__link"
            href="http://testurl.com/admin_console/"
            rel="noreferrer"
            target="_blank"
          >
            link
          </a>
           with an internal url
        </p>
      </span>
    </div>
    <a
      class="announcement-bar__close"
      href="#"
    >
      ×
    </a>
  </div>
</div>
`;

exports[`components/TextDismissableBar > should match snapshot, with ean external url 1`] = `
<div>
  <div
    class="announcement-bar announcement-bar-critical"
    css="[object Object]"
  >
    <div
      class="announcement-bar__text"
    >
      <span>
        <i
          class="icon icon-information-outline"
        />
        <p
          class="markdown__paragraph-inline"
        >
          A 
          <a
            class="theme markdown__link"
            href="http://otherurl.com/admin_console/"
            rel="noreferrer"
            target="_blank"
          >
            link
          </a>
           with an external url
        </p>
      </span>
    </div>
    <a
      class="announcement-bar__close"
      href="#"
    >
      ×
    </a>
  </div>
</div>
`;

exports[`components/TextDismissableBar > should match snapshot, with link but without siteURL 1`] = `
<div>
  <div
    class="announcement-bar announcement-bar-critical"
    css="[object Object]"
  >
    <div
      class="announcement-bar__text"
    >
      <span>
        <i
          class="icon icon-information-outline"
        />
        <p
          class="markdown__paragraph-inline"
        >
          A 
          <a
            class="theme markdown__link"
            href="http://testurl.com/admin_console/"
            rel="noreferrer"
            target="_blank"
          >
            link
          </a>
        </p>
      </span>
    </div>
    <a
      class="announcement-bar__close"
      href="#"
    >
      ×
    </a>
  </div>
</div>
`;
